--- a/QuoteScanner/QuoteScanner.fsproj
+++ b/QuoteScanner/QuoteScanner.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="DbSchema.txt">
+    <Content Include="DbSchema.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
 	<Compile Include="Common.fs" />
